--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^0.14.7",
     "react-addons-test-utils": "^0.14.7",
     "react-dom": "^0.14.7",
+
     "react-router": "^2.0.0"
   },
   "devDependencies": {
@@ -35,6 +36,7 @@
     "karma-webpack": "^1.7.0",
     "mocha": "^2.4.5",
     "node-sass": "^4.5.3",
+    "react-modal": "^3.4.4",
     "react-redux": "^4.4.1",
     "redux": "^3.3.1",
     "sass-loader": "^4.1.1",
